# fastdual

./: .gitignore  README.md  bench.py  bench_overhead.py  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  publish.yml  readme-benchmarks.yml  tests.yml
dev/bench/: data.js
scripts/: generate_charts.py  update_readme_benchmarks.py
src/dualnum/: __init__.py  _dualnum.c  _ufuncs.py
src/fastdual/: __init__.py  __init__.pyi  _coloring.py  _fastdual.c  _fastdual.pyi  _hessian.py  _hyperdual.c  _hyperdual.py  _hyperdual.pyi  _optimize.py
tests/: test_arithmetic.py  test_array_function.py  test_benchmark.py  test_coloring.py  test_gradient.py  test_hyperdual.py  test_numpy.py  test_optimize.py  test_pathsim_integration.py  test_transcendental.py
