[build-system]
requires = ["setuptools>=68.0", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "dualnum"
version = "0.1.0"
description = "Fast forward-mode automatic differentiation via dual numbers (C extension)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.25"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
