[build-system]
requires = ["setuptools>=68.0,<77", "setuptools-scm>=8.0", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdual"
dynamic = ["version"]
description = "Fast forward-mode automatic differentiation via dual numbers (C extension)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=1.25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/milanofthe/fastdual"
Repository = "https://github.com/milanofthe/fastdual"
Issues = "https://github.com/milanofthe/fastdual/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]
optimize = ["scipy>=1.10"]
benchmark = ["pytest-benchmark>=4.0"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
fastdual = ["py.typed", "*.pyi"]

[tool.setuptools.packages.find]
where = ["src"]
